# audiovj-ai

./: .gitignore  README.md  main.py  pyproject.toml
src/audiovj/: cli.py  config.py  evaluate.py  model.py  training.py
src/audiovj/data/: dataset.py  features.py  rekordbox.py
src/audiovj/live/: audio.py  carabiner.py  inference.py  osc.py  pipeline.py  state.py
